[gd_scene load_steps=11 format=3 uid="uid://s5068qhhnkp5"]

[ext_resource type="PackedScene" uid="uid://cyrjqlsuuv5" path="res://scenes/map_editor/story/stories/types/base_edit_action.tscn" id="1_0acqm"]
[ext_resource type="Script" path="res://scenes/map_editor/story/stories/types/terrain_remove.gd" id="2_h65up"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="3_b57n0"]
[ext_resource type="Texture2D" uid="uid://bkp8gbivdpjm" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown.png" id="4_smwyf"]
[ext_resource type="Texture2D" uid="uid://ceku0o1lajwmu" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_pressed.png" id="5_k3ira"]
[ext_resource type="Texture2D" uid="uid://bewr0f1ty1b3v" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_hover.png" id="6_m4ftb"]
[ext_resource type="PackedScene" uid="uid://gxr1dxy4v75y" path="res://scenes/ui/icons/pen.tscn" id="7_g0ch2"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="8_l1wnu"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="9_pt5rm"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="10_naexc"]

[node name="TerrainRemove" instance=ExtResource("1_0acqm")]
script = ExtResource("2_h65up")

[node name="where" type="Label" parent="." index="4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
offset_right = -250.0
offset_bottom = -310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_b57n0")
text = "TR_WHERE"
vertical_alignment = 1

[node name="x" type="LineEdit" parent="where" index="0"]
layout_mode = 0
offset_left = 395.0
offset_right = 465.0
offset_bottom = 40.0
placeholder_text = "X"
alignment = 1
max_length = 2

[node name="y" type="LineEdit" parent="where" index="1"]
layout_mode = 0
offset_left = 470.0
offset_right = 540.0
offset_bottom = 40.0
placeholder_text = "Y"
alignment = 1
max_length = 2

[node name="picker_button" type="TextureButton" parent="where" index="2"]
layout_mode = 0
offset_left = 350.0
offset_right = 386.0
offset_bottom = 40.0
texture_normal = ExtResource("4_smwyf")
texture_pressed = ExtResource("5_k3ira")
texture_hover = ExtResource("6_m4ftb")
texture_focused = ExtResource("6_m4ftb")

[node name="anchor" type="Control" parent="where/picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="where/picker_button/anchor" index="0" instance=ExtResource("7_g0ch2")]

[node name="tile_type" type="Label" parent="." index="5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 200.0
offset_right = -250.0
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_b57n0")
text = "TR_TILE_TYPE"
vertical_alignment = 1

[node name="tile_type" type="LineEdit" parent="tile_type" index="0"]
layout_mode = 0
offset_left = 400.0
offset_right = 540.0
offset_bottom = 40.0
alignment = 1

[node name="type_picker_button" type="TextureButton" parent="tile_type" index="1"]
layout_mode = 0
offset_left = 350.0
offset_right = 386.0
offset_bottom = 40.0
texture_normal = ExtResource("4_smwyf")
texture_pressed = ExtResource("5_k3ira")
texture_hover = ExtResource("6_m4ftb")
texture_focused = ExtResource("6_m4ftb")

[node name="anchor" type="Control" parent="tile_type/type_picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="tile_type/type_picker_button/anchor" index="0" instance=ExtResource("7_g0ch2")]

[node name="explosion" type="Label" parent="." index="6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 250.0
offset_right = -250.0
offset_bottom = -210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_b57n0")
text = "TR_EXPLOSION"
vertical_alignment = 1

[node name="explosion_button" type="TextureButton" parent="explosion" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
texture_normal = ExtResource("8_l1wnu")
texture_pressed = ExtResource("9_pt5rm")
texture_hover = ExtResource("10_naexc")
texture_focused = ExtResource("10_naexc")

[node name="label" type="Label" parent="explosion/explosion_button" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_b57n0")
text = "TR_ON"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_changed" from="where/x" to="." method="_on_text_changed"]
[connection signal="text_changed" from="where/y" to="." method="_on_text_changed"]
[connection signal="pressed" from="where/picker_button" to="." method="_on_picker_button_pressed"]
[connection signal="text_changed" from="tile_type/tile_type" to="." method="_on_text_changed"]
[connection signal="pressed" from="tile_type/type_picker_button" to="." method="_on_type_picker_button_pressed"]
[connection signal="pressed" from="explosion/explosion_button" to="." method="_on_explosion_button_pressed"]
